Some edits on Impala, and updated refs

--- a/paper.tex
+++ b/paper.tex
@@ -111,6 +111,8 @@ We expect this tutorial to be the engaging enough for the audience and act as a 
 
 Even though the driver that enables all the system presented in this tutorial to work in a single cluster environment is the shared file system, Hadoop File System (HDFS), there is actually a variety of file format that are being used to store data. 
 
+Most file formats are variants of PAX \cite{AilamakiDHS01}
+
 \noindent{\bf Text}. By far the most popular file format is of course plain text.
 
 \vspace{2mm}
@@ -142,7 +144,13 @@ As it became clear that the latency of launching jobs for each query is too expe
 
 After discussing the general characteristics of the systems in this category, we will examine 3 representatives systems in some detail: Impala, Big SQL, and Drill. 
 
-Cloudera Impala \cite{Kornacker+15} an open-source, fully-integrated MPP SQL query engine. Impala's goal is to combine the familiar SQL support and multi-user performance of a traditional analytic database with the scalability and flexibility of Apache Hadoop. Unlike other systems (often forks of Postgres), Impala is a brand-new engine. It is written from the ground up in C++ and Java, and employs uses LLVM to generate code at runtime in order to speed up frequently executed code paths. It maintains Hadoop's flexibility by utilizing standard components (HDFS, HBase, Metastore, YARN, Sentry) and is able to read the majority of the widely-used file formats (e.g. Parquet, Avro, RCFile). To reduce latency, such as that incurred from utilizing MapReduce or by reading data remotely, Impala implements a distributed architecture based on daemon processes that are responsible for all aspects of query execution and that run on the same machines as the rest of the Hadoop infrastructure. The result is performance that is on par or exceeds that of commercial MPP analytic DBMSs, depending on the particular workload.
+Cloudera Impala \cite{Kornacker+15} is an open-source, fully-integrated MPP SQL query engine. Unlike other systems (often forks of Postgres), Impala is a brand-new engine. It is written from the ground up in C++ and Java. To reduce latency, such as that incurred from utilizing MapReduce or by reading data remotely, Impala implements a distributed architecture based on daemon processes that are responsible for all aspects of query execution and that run on the same machines as the rest of the Hadoop infrastructure. 
+In order to perform data scans from both disk and memory at or near hardware speed,
+Impala uses an HDFS feature called {\em short-circuit local reads} \cite{hdfs:shortcircuit} to bypass the DataNode protocol when reading from local disk. Impala can read at almost disk bandwidth and is typically able to saturate all available disks. Furthermore, {\em HDFS caching} \cite{hdfs:caching} allows Impala to access memory-resident data at memory bus speed and also saves CPU cycles as there is no need to copy data blocks and/or checksum them.
+Impala leverages decades of research in parallel databases. The execution model is the traditional
+Volcano-style with Exchange operators \cite{Graefe90}. Processing is performed batch-at-a-time:
+each \texttt{GetNext()} call operates over batches of rows, similar to
+\cite{PadmanabhanMAJ01}. A main characteristic of Impala is that employs LLVM to generate code at runtime to speed up frequently executed code paths \cite{WandermanL14}. The result is performance that is on par or exceeds that of commercial MPP analytic DBMSs, depending on the particular workload.
 
 IBM Big SQL \cite{bigsql} leverages IBM's state-of-the-art relational database technology, without imposing any database structures or restrictions, and processes standard SQL queries over HDFS data, supporting all common Hadoop file formats, including text and sequence files, as well as Parquet and ORC files. Big SQL does not introduce any propriety data format. Big SQL 3.0 shares the same catalog and table definitions with Hive using the Hive Metastore. Database workers read HDFS data directly and execute relational operations. Big SQL exploits sophisticated query rewrite transformations \cite{pirahesh96, winmagic} that are targeted for complex nested decision support queries. It uses sophisticated data statistics and a cost-based optimizer to choose the best query execution plan. In traditional shared-nothing databases, each worker owns a partition of the data. Big SQL deviates from this basic model and introduces a scheduler service that assigns HDFS blocks to database workers for processing on a query by query basis. The scheduler identifies where the HDFS blocks are and decides which database workers to include in the query plan. The assignment is done dynamically at run-time to accommodate failures: scheduler uses the workers that are currently up and running. This also allows elasticity. If a new node is added to the database cluster, it can be considered immediately by the scheduler for the new queries. Similarly, if a node crashes or the cluster is scaled down, the scheduler immediately detects this change and chooses database workers for future queries accordingly.
 
