--- a/references.bib
+++ b/references.bib
@@ -503,8 +503,20 @@ howpublished = {\url {http://phoenix.apache.org/}}
 }
 
 @ARTICLE{WandermanL14,
- author ={Skye Wanderman-Milne and Nong Li},
+ author = {Skye Wanderman-Milne and Nong Li},
  title = {Runtime Code Generation in {Cloudera Impala}},
  journal = "IEEE Data Eng. Bull.",
  year = {2014},
+}
+
+@misc{prestofcb,
+ author = {Martin Traverso},
+ title = {Presto: Interacting with petabytes of data at {Facebook}},
+ howpublished = {https://www.facebook.com/notes/facebook-engineering/presto-interacting-with-petabytes-of-data-at-facebook/10151786197628920},
+}
+
+@misc{vortex,
+ author = {Peter Boncz},
+ title = "{Vortex: Vectorwise goes Hadoop}",
+ howpublished = {http://databasearchitects.blogspot.com/2014/05/vectorwise-goes-hadoop.html},
 }
