--- a/paper.tex
+++ b/paper.tex
@@ -114,22 +114,9 @@ We expect this tutorial to be the engaging enough for the audience and act as a 
 \section{File Formats}
 
 Even though the driver that enables all the system presented in this tutorial to work in a single cluster environment is the shared file system, Hadoop File System (HDFS), there is actually a variety of file format that are being used to store data. 
-
-Most file formats are variants of PAX \cite{AilamakiDHS01}
-
-\noindent{\bf Text}. By far the most popular file format is of course plain text.
-
-\vspace{2mm}
-\noindent{\bf Avro}.
-
-\vspace{2mm}
-\noindent{\bf RC}.
-
-\vspace{2mm}
-\noindent{\bf ORC and DRWF}.
-
-\vspace{2mm}
-\noindent{\bf Parquet}.
+By far the most popular file format is of course plain text.
+But there are other options, most of them being variants of PAX \cite{AilamakiDHS01}. For example, Avro, sequence, RC, ORC and DRWF, as well as Parquet.
+We present them and perform a comparison between them in terms of usability, data size (compression) and speed of processing
 
 \section{Category 1: Native systems with big data run-times}
 
