--- a/references.bib
+++ b/references.bib
@@ -520,3 +520,9 @@ howpublished = {\url {http://phoenix.apache.org/}}
  title = "{Vortex: Vectorwise goes Hadoop}",
  howpublished = {http://databasearchitects.blogspot.com/2014/05/vectorwise-goes-hadoop.html},
 }
+
+@misc{dwrf},
+ author = {Dain Sundstrom},
+ title = "{Even faster: Data at the speed of Presto ORC}",
+ howpublished = {https://code.facebook.com/posts/370832626374903/even-faster-data-at-the-speed-of-presto-orc/},
+}
